# Copyright (C) 2018 Ondrej Starek
# 
# This file is part of OTest2.
# 
# OTest2 is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License,
# or (at your option) any later version.
# 
# OTest2 is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
# License for more details.
# 
# You should have received a copy of the GNU Lesser General Public License
# along with OTest2.  If not, see <http://www.gnu.org/licenses/>.
# 
AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/include/otest2
AM_CXXFLAGS = -Wall -Werror

lib_LTLIBRARIES = libotest2.la
libotest2_la_SOURCES = \
    case.cpp \
    casefactory.cpp \
    casegenerated.cpp \
    caseregistry.cpp \
    cmdnextsuite.cpp \
    cmdstarttest.cpp \
    cmdstoptest.cpp \
    command.cpp \
    commandstack.cpp \
    context.cpp \
    exc.cpp \
    registry.cpp \
    reporter.cpp \
    reporterdebug.cpp \
    runner.cpp \
    runnerordinary.cpp \
    state.cpp \
    stategenerated.cpp \
    stateregistry.cpp \
    suite.cpp \
    suitefactory.cpp \
    suitegenerated.cpp
